--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -16,7 +15,6 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "axios-mock-adapter": "^1.22.0",
-    "jest": "^29.7.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
